svc-APP_NAME.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    application: APP_NAME
  name: APP_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentConfig: APP_NAME
  type: ClusterIP
