svc-app-front.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    application: app-front
  name: app-front
spec:
  selector:
    app: app-front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentConfig: app-front
  type: ClusterIP
