svc-app-main.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    application: app-main
  name: app-main
spec:
  selector:
    app: app-main
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
