route-app-front.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: app-front
  name: app-front
spec:
  to:
    kind: Service
    name: app-front
    weight: 100
  wildcardPolicy: None
