route-app-main.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: app-main
  name: app-main
spec:
  to:
    kind: Service
    name: app-main
    weight: 100
  wildcardPolicy: None
